@@ -6168,7 +6168,10 @@ factorization of $f$, see \kbd{FpX\_factor\_squarefree}.
 
 \fun{GEN}{FlxqX_ddf}{GEN f, GEN T, ulong p} as \kbd{FpX\_ddf}.
 
-\fun{GEN}{FlxqX_degfact}{GEN f, GEN T, ulong p} as \kbd{FpX\_degfact}.
+\fun{long}{FlxqX_ddf_degree}{GEN f, GEN XP, GEN T, GEN p},
+as \kbd{FpX\_ddf\_degree}.
+
+\fun{GEN}{FlxqX_degfact}{GEN f, GEN T, ulong p}, as \kbd{FpX\_degfact}.
 
 \fun{long}{FlxqX_nbroots}{GEN S, GEN T, ulong p}, as \kbd{FpX\_nbroots}.
 
