@@ -713,6 +713,7 @@ GEN     Flx_ffisom(GEN P,GEN Q,ulong l);
 GEN     Flxq_ffisom_inv(GEN S,GEN Tp, ulong p);
 GEN     FlxqX_Frobenius(GEN S, GEN T, ulong p);
 GEN     FlxqX_ddf(GEN S, GEN T, ulong p);
+long    FlxqX_ddf_degree(GEN S, GEN XP, GEN T, ulong p);
 GEN     FlxqX_degfact(GEN S, GEN T, ulong p);
 GEN     FlxqX_factor(GEN x, GEN T, ulong p);
 GEN     FlxqX_factor_squarefree(GEN x, GEN T, ulong p);
